Add complementary filter.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,11 @@ services:
     devices:
       - "/dev/i2c-1:/dev/i2c-1"
     restart: always
-    network_mode: "host"
     privileged: true
     command: ros2 run ros_lsm6ds ros_lsm6ds_publisher
+
+  ros-imu-complementary-filter:
+    image: ghcr.io/rosblox/ros-imu-complementary-filter:humble
+    restart: always
+    network_mode: "host"
+    command: ros2 run imu_complementary_filter complementary_filter_node
